src/objects/ACET_Claims_Docs_Report_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>ACET_Report_Code__c</fullName>
        <label>ACET Report Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACET_Report_Definition__c</fullName>
        <label>ACET Report Definition</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACET_Report__c</fullName>
        <label>ACET_Report</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Report Transmission Code</fullName>
                    <default>true</default>
                    <label>Report Transmission Code</label>
                </value>
                <value>
                    <fullName>Report Type Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ACET Claims Docs Report Type</label>
    <pluralLabel>ACET Claims Docs Report Type</pluralLabel>
</CustomObject>